fixed result screen alignment

--- a/src/index.css
+++ b/src/index.css
@@ -24,5 +24,9 @@ code {
 }
 
 .app-container {
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  grid-template-rows: 1fr 14fr;
   overflow: hidden;
 }
